--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
   <head>
     <title>Thermostat</title>
+    <link rel="stylesheet" type="text/css" href="public/style.css">
   </head>
   <body>
     <section>
       <h1 id="temperature"></h1>
       <p>
-        <button id='temperature-up'>+</button>
-        <button id='temperature-down'>-</button>
-        <button id='temperature-reset'>reset</button>
+        <button id='temp-up'>+</button>
+        <button id='temp-down'>-</button>
+        <button id='temp-reset'>reset</button>
         power saving mode is <span id='power-saving-status'>on</span>
         <button id='powersaving-on'>PSM on</button>
         <button id='powersaving-off'>PSM off</button>
       </p>
     </section>
-    <script src='js/thermostat.js'></script>
+    <script src='src/thermostat.js'></script>
+    <script src="src/jquery-3.1.0.js"></script>
+    <script src="src/interface.js"></script>
   </body>
 </html>
