--- a/index.html
+++ b/index.html
@@ -2,22 +2,30 @@
 <html>
   <head>
     <title>Thermostat</title>
-    <link rel="stylesheet" type="text/css" href="public/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body>
+  <body id='body'>
     <section>
-      <h1 id="temperature"></h1>
+      <section>
+        <h1>Current temperature: <span id="current-temperature"></span></h1>
+          <select id="current-city">
+            <option value="london">London</option>
+            <option value="newyork">New York</option>
+            <option value="paris">Paris</option>
+            <option value="tokyo">Tokyo</option>
+          </select>
+      </section>
       <p>
         <button id='temp-up'>+</button>
         <button id='temp-down'>-</button>
         <button id='temp-reset'>reset</button>
-        power saving mode is <span id='power-saving-status'>on</span>
+        power saving mode is <span id='powersaving-status'>on</span>
         <button id='powersaving-on'>PSM on</button>
         <button id='powersaving-off'>PSM off</button>
       </p>
     </section>
     <script src='src/thermostat.js'></script>
-    <script src="src/jquery-3.1.0.js"></script>
-    <script src="src/interface.js"></script>
+    <script src="jquery-3.1.0.js"></script>
+    <script src="interface.js"></script>
   </body>
 </html>
