add thermostat temp

--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
   <body id='body'>
     <section>
       <section>
-        <h1>Current temperature: <span id="current-temperature"></span></h1>
-          <select id="current-city">
-            <option value="london">London</option>
-            <option value="newyork">New York</option>
-            <option value="paris">Paris</option>
-            <option value="tokyo">Tokyo</option>
-          </select>
+          <h1>My house temperature: <span id="temperature"></span></h1>
       </section>
       <p>
         <button id='temp-up'>+</button>
@@ -23,6 +17,13 @@
         <button id='powersaving-on'>PSM on</button>
         <button id='powersaving-off'>PSM off</button>
       </p>
+          <h1>Current temperature: <span id="current-temperature"></span></h1>
+          <select id="current-city">
+            <option value="london">London</option>
+            <option value="newyork">New York</option>
+            <option value="paris">Paris</option>
+            <option value="tokyo">Tokyo</option>
+          </select>
     </section>
     <script src='src/thermostat.js'></script>
     <script src="jquery-3.1.0.js"></script>
